[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyPyramid"
version = "0.0.1"
authors = [{name = "Matic Plut", email = "matic.plut02@gmail.com"}]
maintainers = [{name = "Matic Plut", email = "matic.plut02@gmail.com"}]
license = "MIT"
description = "A python package implementing image pyramids in DIC algorithm."
readme = "README.rst"
keywords = ["DIC", "image pyramid"]
requires-python = ">=3.12"

# Dependency management (these must be installed for the package to work)
dependencies = [
    "numpy>=2.4.6",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "opencv-python>=4.13.0.92",
    "tqdm>=4.67.3",
    "tabulate>=0.10.0",
]

classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python :: 3.12',
    "License :: OSI Approved :: MIT License",
]

# Optional dependencies (can be installed with `pip install sdypy-template[dev]`).
# Can add as many as you want, but they must be listed in the `optional-dependencies` section.
[project.optional-dependencies]
dev = [
    "sphinx",
    "twine",
    "wheel",
    "pytest",
    "build",
    "sphinx-rtd-theme",
    "sphinx-copybutton>=0.5.2",
]

[project.urls]
homepage = "https://github.com/maticplut/pyPyramid"
documentation = "https://github.com/maticplut/pyPyramid"
source = "https://github.com/maticplut/pyPyramid"

# Define the files that are included in the wheel
[tool.hatch.build.targets.wheel]
include = ["pyPyramid/*"]

# Define the files that are included in the source distribution (tar.gz)
[tool.hatch.build.targets.sdist]
include = [
    "pyPyramid/*"
]